# powerful-paper-finder

./: .env.example  .gitignore  README.md  app.js  app.py  config.yml  config.yml.example  data.json  index.html  main.py  pyproject.toml  run.py  test_connection.py
.claude/skills/paper-finder/: SKILL.md
.github/workflows/: daily-paper-finder.yml
frontend/: style.css
src/: ccf_venues.py  exporter.py  fetcher.py  filter.py  reviewer.py  scorer.py  venue_fetcher.py
templates/: index.html
